Add redstone status to UI, being improving control addon visuals

--- a/common/src/main/resources/assets/oritech/lang/en_us.json
+++ b/common/src/main/resources/assets/oritech/lang/en_us.json
@@ -215,6 +215,14 @@
   "title.oritech.catalyst.stabilized": "Stabilized",
   "title.oritech.catalyst.semi_stable": "Semi-Stable",
   "title.oritech.catalyst.unstable": "Unstable",
+  "tooltip.oritech.redstone_disabled": "Stopped",
+  "tooltip.oritech.redstone_disabled.tooltip": "This machine has been disabled with an active redstone signal.",
+  "tooltip.oritech.redstone_disabled_storage": "Blocked",
+  "tooltip.oritech.redstone_disabled_storage.tooltip": "Will not output power while disabled with a redstone signal",
+  "tooltip.oritech.redstone_enabled": "Normal",
+  "tooltip.oritech.redstone_enabled.tooltip": "This machine is operating as normal.\nDisable with with a redstone signal to the redstone addon",
+  "tooltip.oritech.redstone_enabled_direct": "Normal",
+  "tooltip.oritech.redstone_enabled_direct.tooltip": "This machine is operating as normal.\nDisable with with a redstone signal to this block or the addon",
   "tooltip.oritech.spawner.collected_souls": "%d / %d Souls",
   "tooltip.oritech.accelerator": "Injects particles into particle accelerator guide rings.",
   "tooltip.oritech.accelerator_motor": "Uses energy to speed up particles moving through it.",
@@ -578,6 +586,7 @@
   "text.oritech.accelerator.ui.exited": "Particle Exited",
   "text.oritech.accelerator.ui.exited.stats": "Coordinates %s\nLast Curve Dist: %s\nMin Curve Dist: %s",
   "text.oritech.accelerator.ui.exited.nogate": "Coordinates %s\nNo gate in range\nRange: %s",
+  "text.oritech.redstone_power": "Level: %s",
   "text.config.oritech-config.title": "Oritech Settings",
   "text.config.oritech-config.section.machineSettings": "Machines",
   "text.config.oritech-config.category.processingMachines": "Processing Machines",
