Change resource block translations, improve sounds, make energite glow

--- a/common/src/main/resources/assets/oritech/lang/en_us.json
+++ b/common/src/main/resources/assets/oritech/lang/en_us.json
@@ -384,20 +384,20 @@
   "block.oritech.industrial_glass_block": "Industrial Glass",
   "block.oritech.capacitor_addon_extender": "Power Bank Addon",
   "block.oritech.treefeller_block": "Tree Cutter",
-  "block.oritech.steel_block": "Steel Block",
-  "block.oritech.energite_block": "Energite Block",
-  "block.oritech.nickel_block": "Nickel Block",
-  "block.oritech.biosteel_block": "Biosteel Block",
-  "block.oritech.platinum_block": "Platinum Block",
-  "block.oritech.adamant_block": "Adamant Block",
-  "block.oritech.electrum_block": "Electrum Block",
-  "block.oritech.duratium_block": "Duratium Block",
-  "block.oritech.biomass_block": "Biomass Block",
-  "block.oritech.plastic_block": "Plastic Block",
-  "block.oritech.fluxite_block": "Fluxite Block",
-  "block.oritech.silicon_block": "Silicon Block",
-  "block.oritech.raw_nickel_block": "Raw Nickel Block",
-  "block.oritech.raw_platinum_block": "Raw Platinum Block",
+  "block.oritech.steel_block": "Block of Steel",
+  "block.oritech.energite_block": "Block of Energite",
+  "block.oritech.nickel_block": "Block of Nickel",
+  "block.oritech.biosteel_block": "Block of Biosteel",
+  "block.oritech.platinum_block": "Block of Platinum",
+  "block.oritech.adamant_block": "Block of Adamant",
+  "block.oritech.electrum_block": "Block of Electrum",
+  "block.oritech.duratium_block": "Block of Duratium",
+  "block.oritech.biomass_block": "Block of Biomass",
+  "block.oritech.plastic_block": "Block of Plastic",
+  "block.oritech.fluxite_block": "Block of Fluxite",
+  "block.oritech.silicon_block": "Block of Silicon",
+  "block.oritech.raw_nickel_block": "Block of Raw Nickel",
+  "block.oritech.raw_platinum_block": "Block of Raw Platinum",
   "block.oritech.black_hole_block": [
     {
       "text": "Black Hole (WIP)",
