New Crowdin updates (#177)

--- a/common/src/main/resources/assets/oritech/lang/pt_br.json
+++ b/common/src/main/resources/assets/oritech/lang/pt_br.json
@@ -66,6 +66,7 @@
   "tooltip.oritech.needs_laser_power": "Deve ser alimentado por um laser endérico",
   "tooltip.oritech.steam_engine": "Processa vapor em RF e água. Pode ser encadeado.",
   "tooltip.oritech.item_filter": "Usado para filtrar quais itens podem ser inseridos em um inventário.",
+  "tooltip.oritech.particle_collector": "Collects the energy of tachyons emitted by particle collisions.",
   "button.oritech.item_filter.whitelist": "Lista Branca",
   "title.oritech.item_filter.whitelist": "Lista Branca",
   "tooltip.oritech.item_filter.whitelist": "Atualmente permite apenas itens que correspondam aos listados.",
@@ -199,6 +200,7 @@
   "tooltip.oritech.energy_usage": "%s / %s RF\n%s%% Carregado\n\nUso Máximo: %s RF/t",
   "title.oritech.machine.no_addons": "Nenhum addon conectado",
   "button.oritech.machine.addons": "Addons",
+  "tooltip.oritech.pipe_booster": "Increases the extraction speed of a fluid/item pipe behind it",
   "title.oritech.machine.capacitor_added_capacity": "🔋 %d RF ",
   "tooltip.oritech.machine.capacitor_added_capacity": "Capacidade Adicionada",
   "title.oritech.machine.capacitor_added_throughput": "🔋 %d RF/t",
@@ -213,6 +215,14 @@
   "title.oritech.catalyst.stabilized": "Estabilizado",
   "title.oritech.catalyst.semi_stable": "Semi-Estável",
   "title.oritech.catalyst.unstable": "Instável",
+  "tooltip.oritech.redstone_disabled": "Stopped",
+  "tooltip.oritech.redstone_disabled.tooltip": "This machine has been disabled with an active redstone signal.",
+  "tooltip.oritech.redstone_disabled_storage": "Blocked",
+  "tooltip.oritech.redstone_disabled_storage.tooltip": "Will not output power while disabled with a redstone signal",
+  "tooltip.oritech.redstone_enabled": "Normal",
+  "tooltip.oritech.redstone_enabled.tooltip": "This machine is operating as normal.\nDisable with with a redstone signal to the redstone addon",
+  "tooltip.oritech.redstone_enabled_direct": "Normal",
+  "tooltip.oritech.redstone_enabled_direct.tooltip": "This machine is operating as normal.\nDisable with with a redstone signal to this block or the addon",
   "tooltip.oritech.spawner.collected_souls": "%d / %d Almas",
   "tooltip.oritech.accelerator": "Injeta partículas nos anéis-guia do acelerador de partículas.",
   "tooltip.oritech.accelerator_motor": "Usa energia para acelerar partículas se movendo atravéz isso.",
@@ -291,6 +301,7 @@
   "block.oritech.fragment_forge_block": "Forja de Fragmentos",
   "block.oritech.assembler_block": "Montador",
   "block.oritech.foundry_block": "Fundição",
+  "block.oritech.particle_collector_block": "Tachyon Absorber",
   "block.oritech.centrifuge_block": "Centrífuga",
   "block.oritech.atomic_forge_block": "Forja Atômica",
   "block.oritech.bio_generator_block": "Gerador Biológico",
@@ -302,6 +313,7 @@
   "block.oritech.powered_furnace_block": "Forno Energizado",
   "block.oritech.laser_arm_block": "Laser Endérico",
   "block.oritech.deep_drill_block": "Extrator de Bedrock",
+  "block.oritech.pipe_booster_block": "Pipe Booster",
   "block.oritech.drone_port_block": "Porto de Drone",
   "block.oritech.charger_block": "Equipment Charger",
   "block.oritech.small_storage_block": "Armazenamento de Energia Portátil",
@@ -372,6 +384,20 @@
   "block.oritech.industrial_glass_block": "Vidro Industrial",
   "block.oritech.capacitor_addon_extender": "Addon de Banco de Energia",
   "block.oritech.treefeller_block": "Cortador de Árvores",
+  "block.oritech.steel_block": "Block of Steel",
+  "block.oritech.energite_block": "Block of Energite",
+  "block.oritech.nickel_block": "Block of Nickel",
+  "block.oritech.biosteel_block": "Block of Biosteel",
+  "block.oritech.platinum_block": "Block of Platinum",
+  "block.oritech.adamant_block": "Block of Adamant",
+  "block.oritech.electrum_block": "Block of Electrum",
+  "block.oritech.duratium_block": "Block of Duratium",
+  "block.oritech.biomass_block": "Block of Biomass",
+  "block.oritech.plastic_block": "Block of Plastic",
+  "block.oritech.fluxite_block": "Block of Fluxite",
+  "block.oritech.silicon_block": "Block of Silicon",
+  "block.oritech.raw_nickel_block": "Block of Raw Nickel",
+  "block.oritech.raw_platinum_block": "Block of Raw Platinum",
   "block.oritech.black_hole_block": [
     {
       "text": "Black Hole (WIP)",
@@ -496,6 +522,9 @@
   "item.oritech.jetpack_elytra": "Boosted Elytra",
   "item.oritech.jetpack_exo_elytra": "Boosted Exo Elytra",
   "item.oritech.oritech_guide": "Manual Oritech",
+  "fluid.oritech.still_fuel": "Combustível Turbo",
+  "fluid.oritech.still_oil": "Oil",
+  "fluid.oritech.still_steam": "Vapor",
   "item.oritech.promethium_axe": [
     {
       "text": "Machadinha de Prometeu",
@@ -557,6 +586,7 @@
   "text.oritech.accelerator.ui.exited": "Partícula Saiu",
   "text.oritech.accelerator.ui.exited.stats": "Coordinates %s\nLast Curve Dist: %s\nMin Curve Dist: %s",
   "text.oritech.accelerator.ui.exited.nogate": "Coordinates %s\nNo gate in range\nRange: %s",
+  "text.oritech.redstone_power": "Level: %s",
   "text.config.oritech-config.title": "Configurações Oritech",
   "text.config.oritech-config.section.machineSettings": "Máquinas",
   "text.config.oritech-config.category.processingMachines": "Máquinas de Processamento",
@@ -747,6 +777,9 @@
   "text.config.oritech-config.option.endPortalRequiredSpeed": "Minimum End Portal Collision Energy",
   "text.config.oritech-config.option.netherPortalRequiredSpeed": "Minimum Nether Portal Collision Energy",
   "text.config.oritech-config.option.blackHoleRequiredSpeed": "Minimum Black Hole Collision Energy",
+  "text.config.oritech-config.option.collectorEnergyStorage": "Tachyon Collector Energy Capacity",
+  "text.config.oritech-config.option.blackHoleTachyonEnergy": "Energy of Tachyons from Black Holes",
+  "text.config.oritech-config.option.tachyonCollisionEnergyFactor": "Particle Collision Tachyon RF Multiplier",
   "text.config.oritech-config.section.blackHole": "Black Hole",
   "text.config.oritech-config.option.pullTimeMultiplier": "Black Hole Pull Time Multiplier",
   "text.config.oritech-config.option.pullRange": "Black Hole Pull Range",
