--- a/common/src/main/resources/assets/oritech/lang/ru_ru.json
+++ b/common/src/main/resources/assets/oritech/lang/ru_ru.json
@@ -66,6 +66,7 @@
   "tooltip.oritech.needs_laser_power": "Должен быть заряжен через эндерический лазер",
   "tooltip.oritech.steam_engine": "Превращает пар в RF и воду. Может быть соединен",
   "tooltip.oritech.item_filter": "Используется для фильтрации, какие предметы можно вставить в инвентарь.",
+  "tooltip.oritech.particle_collector": "Collects the energy of tachyons emitted by particle collisions.",
   "button.oritech.item_filter.whitelist": "Исключения",
   "title.oritech.item_filter.whitelist": "Исключения",
   "tooltip.oritech.item_filter.whitelist": "В настоящее время допускается только элементы, через которые \nсовпадает с перечисленными элементами",
@@ -199,6 +200,7 @@
   "tooltip.oritech.energy_usage": "%s / %s RF\n%s%% Заряжено\n\nмаксимальное использование: %s RF/t",
   "title.oritech.machine.no_addons": "Дополнения не подключены",
   "button.oritech.machine.addons": "Дополнения",
+  "tooltip.oritech.pipe_booster": "Увеличивает скорость извлечения жидкости/вещи за трубой",
   "title.oritech.machine.capacitor_added_capacity": "🔋 %d RF ",
   "tooltip.oritech.machine.capacitor_added_capacity": "Добавлен Вместимость",
   "title.oritech.machine.capacitor_added_throughput": "🔋 %d RF/т",
@@ -213,6 +215,14 @@
   "title.oritech.catalyst.stabilized": "Стабилизация",
   "title.oritech.catalyst.semi_stable": "Полустабильный",
   "title.oritech.catalyst.unstable": "Нестабильный",
+  "tooltip.oritech.redstone_disabled": "Stopped",
+  "tooltip.oritech.redstone_disabled.tooltip": "This machine has been disabled with an active redstone signal.",
+  "tooltip.oritech.redstone_disabled_storage": "Blocked",
+  "tooltip.oritech.redstone_disabled_storage.tooltip": "Will not output power while disabled with a redstone signal",
+  "tooltip.oritech.redstone_enabled": "Normal",
+  "tooltip.oritech.redstone_enabled.tooltip": "This machine is operating as normal.\nDisable with with a redstone signal to the redstone addon",
+  "tooltip.oritech.redstone_enabled_direct": "Normal",
+  "tooltip.oritech.redstone_enabled_direct.tooltip": "This machine is operating as normal.\nDisable with with a redstone signal to this block or the addon",
   "tooltip.oritech.spawner.collected_souls": "%d / %d Души",
   "tooltip.oritech.accelerator": "Впрыскивает частицы в направляющие кольца ускорителя частиц.",
   "tooltip.oritech.accelerator_motor": "Использует энергию для ускорения движения частиц.",
@@ -291,6 +301,7 @@
   "block.oritech.fragment_forge_block": "Ковка Фрагментов",
   "block.oritech.assembler_block": "Сборка",
   "block.oritech.foundry_block": "Литейный цех",
+  "block.oritech.particle_collector_block": "Tachyon Absorber",
   "block.oritech.centrifuge_block": "Центрифуга",
   "block.oritech.atomic_forge_block": "Атомная Кузня",
   "block.oritech.bio_generator_block": "Биогенератор",
@@ -302,6 +313,7 @@
   "block.oritech.powered_furnace_block": "Мощная печь",
   "block.oritech.laser_arm_block": "Эндерический лазер",
   "block.oritech.deep_drill_block": "Бедрок экстрактор",
+  "block.oritech.pipe_booster_block": "Ускоритель труб",
   "block.oritech.drone_port_block": "Порт дронов",
   "block.oritech.charger_block": "Equipment Charger",
   "block.oritech.small_storage_block": "Портативное энергетическое хранилище",
@@ -372,6 +384,20 @@
   "block.oritech.industrial_glass_block": "Промышленное стекло",
   "block.oritech.capacitor_addon_extender": "Дополнение Power Bank",
   "block.oritech.treefeller_block": "Деревянный резак",
+  "block.oritech.steel_block": "Block of Steel",
+  "block.oritech.energite_block": "Block of Energite",
+  "block.oritech.nickel_block": "Block of Nickel",
+  "block.oritech.biosteel_block": "Block of Biosteel",
+  "block.oritech.platinum_block": "Block of Platinum",
+  "block.oritech.adamant_block": "Block of Adamant",
+  "block.oritech.electrum_block": "Block of Electrum",
+  "block.oritech.duratium_block": "Block of Duratium",
+  "block.oritech.biomass_block": "Block of Biomass",
+  "block.oritech.plastic_block": "Block of Plastic",
+  "block.oritech.fluxite_block": "Block of Fluxite",
+  "block.oritech.silicon_block": "Block of Silicon",
+  "block.oritech.raw_nickel_block": "Block of Raw Nickel",
+  "block.oritech.raw_platinum_block": "Block of Raw Platinum",
   "block.oritech.black_hole_block": [
     {
       "text": "Black Hole (WIP)",
@@ -496,6 +522,9 @@
   "item.oritech.jetpack_elytra": "Boosted Elytra",
   "item.oritech.jetpack_exo_elytra": "Boosted Exo Elytra",
   "item.oritech.oritech_guide": "Руководство по Oritech",
+  "fluid.oritech.still_fuel": "Турботопливо",
+  "fluid.oritech.still_oil": "Oil",
+  "fluid.oritech.still_steam": "Пар",
   "item.oritech.promethium_axe": [
     {
       "text": "Боевой топор Прометея",
@@ -557,6 +586,7 @@
   "text.oritech.accelerator.ui.exited": "Частица извлечена",
   "text.oritech.accelerator.ui.exited.stats": "Координаты %s\nПоследний Расчёт кривого: %s\nМинный Расчёт кривого: %s",
   "text.oritech.accelerator.ui.exited.nogate": "Координаты %s\nНет ворот в диапазоне\nДиапазон: %s",
+  "text.oritech.redstone_power": "Level: %s",
   "text.config.oritech-config.title": "Настройки Oritech",
   "text.config.oritech-config.section.machineSettings": "Машины",
   "text.config.oritech-config.category.processingMachines": "Процессоры обработки",
@@ -747,6 +777,9 @@
   "text.config.oritech-config.option.endPortalRequiredSpeed": "Минимальная энергия портала Энда",
   "text.config.oritech-config.option.netherPortalRequiredSpeed": "Минимальная энергия Портала Незера",
   "text.config.oritech-config.option.blackHoleRequiredSpeed": "Минимальная энергия столкновения черной дыры",
+  "text.config.oritech-config.option.collectorEnergyStorage": "Tachyon Collector Energy Capacity",
+  "text.config.oritech-config.option.blackHoleTachyonEnergy": "Energy of Tachyons from Black Holes",
+  "text.config.oritech-config.option.tachyonCollisionEnergyFactor": "Particle Collision Tachyon RF Multiplier",
   "text.config.oritech-config.section.blackHole": "Чёрная дыра",
   "text.config.oritech-config.option.pullTimeMultiplier": "Множитель времени притяжения чёрной дыры",
   "text.config.oritech-config.option.pullRange": "Диапазон притяжения чёрной дыры",
