--- a/common/src/main/resources/assets/oritech/lang/tr_tr.json
+++ b/common/src/main/resources/assets/oritech/lang/tr_tr.json
@@ -66,6 +66,7 @@
   "tooltip.oritech.needs_laser_power": "Bir enderik lazer ile güçlendirilmelidir",
   "tooltip.oritech.steam_engine": "Buharı RF ve suya dönüştürür. Birbirine zincirlenebilir",
   "tooltip.oritech.item_filter": "Bir envantere hangi eşyaların eklenebileceğini filtrelemek için kullanılır.",
+  "tooltip.oritech.particle_collector": "Collects the energy of tachyons emitted by particle collisions.",
   "button.oritech.item_filter.whitelist": "Beyaz Liste",
   "title.oritech.item_filter.whitelist": "Beyaz Liste",
   "tooltip.oritech.item_filter.whitelist": "Şu anda yalnızca listelenen eşyalarla\neşleşen eşyaların geçişine izin verilmektedir",
@@ -199,6 +200,7 @@
   "tooltip.oritech.energy_usage": "%s / %s RF\n%s%% Şarj Edilmiş\n\nMaksimum Kullanım: %s RF/t",
   "title.oritech.machine.no_addons": "Bağlı eklenti yok",
   "button.oritech.machine.addons": "Eklentiler",
+  "tooltip.oritech.pipe_booster": "Increases the extraction speed of a fluid/item pipe behind it",
   "title.oritech.machine.capacitor_added_capacity": "🔋 %d RF ",
   "tooltip.oritech.machine.capacitor_added_capacity": "Kapasite eklendi",
   "title.oritech.machine.capacitor_added_throughput": "🔋 %d RF/t",
@@ -213,6 +215,14 @@
   "title.oritech.catalyst.stabilized": "Stabilize",
   "title.oritech.catalyst.semi_stable": "Yarı Stabil",
   "title.oritech.catalyst.unstable": "Stabil değil",
+  "tooltip.oritech.redstone_disabled": "Stopped",
+  "tooltip.oritech.redstone_disabled.tooltip": "This machine has been disabled with an active redstone signal.",
+  "tooltip.oritech.redstone_disabled_storage": "Blocked",
+  "tooltip.oritech.redstone_disabled_storage.tooltip": "Will not output power while disabled with a redstone signal",
+  "tooltip.oritech.redstone_enabled": "Normal",
+  "tooltip.oritech.redstone_enabled.tooltip": "This machine is operating as normal.\nDisable with with a redstone signal to the redstone addon",
+  "tooltip.oritech.redstone_enabled_direct": "Normal",
+  "tooltip.oritech.redstone_enabled_direct.tooltip": "This machine is operating as normal.\nDisable with with a redstone signal to this block or the addon",
   "tooltip.oritech.spawner.collected_souls": "%d / %d Ruh",
   "tooltip.oritech.accelerator": "Parçacıkları parçacık hızlandırıcı kılavuz halkalarına enjekte eder.",
   "tooltip.oritech.accelerator_motor": "İçinden geçen parçacıkları hızlandırmak için enerji kullanır.",
@@ -291,6 +301,7 @@
   "block.oritech.fragment_forge_block": "Parça Dövücü",
   "block.oritech.assembler_block": "Birleştirici",
   "block.oritech.foundry_block": "Dökümhane",
+  "block.oritech.particle_collector_block": "Tachyon Absorber",
   "block.oritech.centrifuge_block": "Santrifüj",
   "block.oritech.atomic_forge_block": "Atomik Dövücü",
   "block.oritech.bio_generator_block": "Biyo Jeneratör",
@@ -302,6 +313,7 @@
   "block.oritech.powered_furnace_block": "Elektrikli Ocak",
   "block.oritech.laser_arm_block": "Enderik Lazer",
   "block.oritech.deep_drill_block": "Katman Kayası Çıkarıcı",
+  "block.oritech.pipe_booster_block": "Pipe Booster",
   "block.oritech.drone_port_block": "Drone Limanı",
   "block.oritech.charger_block": "Ekipman Şarj Cihazı",
   "block.oritech.small_storage_block": "Taşınabilir Enerji Deposu",
@@ -372,6 +384,20 @@
   "block.oritech.industrial_glass_block": "Endüstriyel Cam",
   "block.oritech.capacitor_addon_extender": "Güç Bankası Eklenti",
   "block.oritech.treefeller_block": "Ağaç Kesici",
+  "block.oritech.steel_block": "Block of Steel",
+  "block.oritech.energite_block": "Block of Energite",
+  "block.oritech.nickel_block": "Block of Nickel",
+  "block.oritech.biosteel_block": "Block of Biosteel",
+  "block.oritech.platinum_block": "Block of Platinum",
+  "block.oritech.adamant_block": "Block of Adamant",
+  "block.oritech.electrum_block": "Block of Electrum",
+  "block.oritech.duratium_block": "Block of Duratium",
+  "block.oritech.biomass_block": "Block of Biomass",
+  "block.oritech.plastic_block": "Block of Plastic",
+  "block.oritech.fluxite_block": "Block of Fluxite",
+  "block.oritech.silicon_block": "Block of Silicon",
+  "block.oritech.raw_nickel_block": "Block of Raw Nickel",
+  "block.oritech.raw_platinum_block": "Block of Raw Platinum",
   "block.oritech.black_hole_block": [
     {
       "text": "Kara Delik (WIP)",
@@ -496,6 +522,9 @@
   "item.oritech.jetpack_elytra": "Desteklenmiş Elitra",
   "item.oritech.jetpack_exo_elytra": "Desteklenmiş Exo Elitra",
   "item.oritech.oritech_guide": "Oritech El Kitabı",
+  "fluid.oritech.still_fuel": "Turbo Yakıt",
+  "fluid.oritech.still_oil": "Oil",
+  "fluid.oritech.still_steam": "Buhar",
   "item.oritech.promethium_axe": [
     {
       "text": "Prometheum Savaş Baltası",
@@ -557,6 +586,7 @@
   "text.oritech.accelerator.ui.exited": "Parçacık Çıktı",
   "text.oritech.accelerator.ui.exited.stats": "Koordinatlar %s\nSon Eğri Mesafesi: %s\nMin Eğri Mesafesi: %s",
   "text.oritech.accelerator.ui.exited.nogate": "Koordinatlar %s\nMenzilde geçit yok\nMenzil: %s",
+  "text.oritech.redstone_power": "Level: %s",
   "text.config.oritech-config.title": "Oritech Ayarları",
   "text.config.oritech-config.section.machineSettings": "Makineler",
   "text.config.oritech-config.category.processingMachines": "İşleme Makineleri",
@@ -747,6 +777,9 @@
   "text.config.oritech-config.option.endPortalRequiredSpeed": "Minimum End Portal Çarpışma Enerjisi",
   "text.config.oritech-config.option.netherPortalRequiredSpeed": "Minimum Nether Portalı Çarpışma Enerjisi",
   "text.config.oritech-config.option.blackHoleRequiredSpeed": "Minimum Kara Delik Çarpışma Enerjisi",
+  "text.config.oritech-config.option.collectorEnergyStorage": "Tachyon Collector Energy Capacity",
+  "text.config.oritech-config.option.blackHoleTachyonEnergy": "Energy of Tachyons from Black Holes",
+  "text.config.oritech-config.option.tachyonCollisionEnergyFactor": "Particle Collision Tachyon RF Multiplier",
   "text.config.oritech-config.section.blackHole": "Kara Delik",
   "text.config.oritech-config.option.pullTimeMultiplier": "Kara Delik Çekme Süresi Çarpanı",
   "text.config.oritech-config.option.pullRange": "Kara Delik Çekme Menzili",
