--- a/common/src/main/resources/assets/oritech/lang/zh_cn.json
+++ b/common/src/main/resources/assets/oritech/lang/zh_cn.json
@@ -66,6 +66,7 @@
   "tooltip.oritech.needs_laser_power": "必须使用末影激光供能",
   "tooltip.oritech.steam_engine": "将蒸汽处理为RF和水。可以被连接在一起",
   "tooltip.oritech.item_filter": "用来过滤哪些物品能被插入一个物品栏。",
+  "tooltip.oritech.particle_collector": "Collects the energy of tachyons emitted by particle collisions.",
   "button.oritech.item_filter.whitelist": "白名单",
   "title.oritech.item_filter.whitelist": "白名单",
   "tooltip.oritech.item_filter.whitelist": "只允许列表中的物品通过",
@@ -199,6 +200,7 @@
   "tooltip.oritech.energy_usage": "%s / %s RF\n%s%% 已充能\n\n最大功率：%s RF/刻",
   "title.oritech.machine.no_addons": "未连接插件",
   "button.oritech.machine.addons": "插件",
+  "tooltip.oritech.pipe_booster": "Increases the extraction speed of a fluid/item pipe behind it",
   "title.oritech.machine.capacitor_added_capacity": "🔋 %d RF ",
   "tooltip.oritech.machine.capacitor_added_capacity": "附加容量",
   "title.oritech.machine.capacitor_added_throughput": "🔋 %d RF/刻",
@@ -213,6 +215,14 @@
   "title.oritech.catalyst.stabilized": "稳定",
   "title.oritech.catalyst.semi_stable": "半稳定",
   "title.oritech.catalyst.unstable": "不稳定",
+  "tooltip.oritech.redstone_disabled": "Stopped",
+  "tooltip.oritech.redstone_disabled.tooltip": "This machine has been disabled with an active redstone signal.",
+  "tooltip.oritech.redstone_disabled_storage": "Blocked",
+  "tooltip.oritech.redstone_disabled_storage.tooltip": "Will not output power while disabled with a redstone signal",
+  "tooltip.oritech.redstone_enabled": "Normal",
+  "tooltip.oritech.redstone_enabled.tooltip": "This machine is operating as normal.\nDisable with with a redstone signal to the redstone addon",
+  "tooltip.oritech.redstone_enabled_direct": "Normal",
+  "tooltip.oritech.redstone_enabled_direct.tooltip": "This machine is operating as normal.\nDisable with with a redstone signal to this block or the addon",
   "tooltip.oritech.spawner.collected_souls": "%d / %d 灵魂",
   "tooltip.oritech.accelerator": "将粒子注入粒子加速器导向环",
   "tooltip.oritech.accelerator_motor": "使用能量来加速通过它的粒子。",
@@ -291,6 +301,7 @@
   "block.oritech.fragment_forge_block": "粉碎工厂",
   "block.oritech.assembler_block": "装配器",
   "block.oritech.foundry_block": "铸造器",
+  "block.oritech.particle_collector_block": "Tachyon Absorber",
   "block.oritech.centrifuge_block": "离心机",
   "block.oritech.atomic_forge_block": "原子锻造器",
   "block.oritech.bio_generator_block": "生物质能发电机",
@@ -302,6 +313,7 @@
   "block.oritech.powered_furnace_block": "电炉",
   "block.oritech.laser_arm_block": "末影激光器",
   "block.oritech.deep_drill_block": "基岩层钻机",
+  "block.oritech.pipe_booster_block": "Pipe Booster",
   "block.oritech.drone_port_block": "无人机港",
   "block.oritech.charger_block": "装备充能器",
   "block.oritech.small_storage_block": "便携能量存储",
@@ -372,6 +384,20 @@
   "block.oritech.industrial_glass_block": "工业玻璃",
   "block.oritech.capacitor_addon_extender": "能量储存插件",
   "block.oritech.treefeller_block": "伐木器",
+  "block.oritech.steel_block": "Block of Steel",
+  "block.oritech.energite_block": "Block of Energite",
+  "block.oritech.nickel_block": "Block of Nickel",
+  "block.oritech.biosteel_block": "Block of Biosteel",
+  "block.oritech.platinum_block": "Block of Platinum",
+  "block.oritech.adamant_block": "Block of Adamant",
+  "block.oritech.electrum_block": "Block of Electrum",
+  "block.oritech.duratium_block": "Block of Duratium",
+  "block.oritech.biomass_block": "Block of Biomass",
+  "block.oritech.plastic_block": "Block of Plastic",
+  "block.oritech.fluxite_block": "Block of Fluxite",
+  "block.oritech.silicon_block": "Block of Silicon",
+  "block.oritech.raw_nickel_block": "Block of Raw Nickel",
+  "block.oritech.raw_platinum_block": "Block of Raw Platinum",
   "block.oritech.black_hole_block": [
     {
       "text": "黑洞（未完成）",
@@ -496,6 +522,9 @@
   "item.oritech.jetpack_elytra": "强化鞘翅",
   "item.oritech.jetpack_exo_elytra": "强化外骨骼鞘翅",
   "item.oritech.oritech_guide": "Oritech 手册",
+  "fluid.oritech.still_fuel": "涡轮燃料",
+  "fluid.oritech.still_oil": "Oil",
+  "fluid.oritech.still_steam": "蒸汽",
   "item.oritech.promethium_axe": [
     {
       "text": "钷战斧",
@@ -557,6 +586,7 @@
   "text.oritech.accelerator.ui.exited": "粒子已退出",
   "text.oritech.accelerator.ui.exited.stats": "坐标 %s\n最后转弯距离：%s\n最小转弯距离：%s",
   "text.oritech.accelerator.ui.exited.nogate": "坐标：%s\n范围内未找到门\n范围：%s",
+  "text.oritech.redstone_power": "Level: %s",
   "text.config.oritech-config.title": "Oritech设置",
   "text.config.oritech-config.section.machineSettings": "机器",
   "text.config.oritech-config.category.processingMachines": "处理机器",
@@ -747,6 +777,9 @@
   "text.config.oritech-config.option.endPortalRequiredSpeed": "末地传送门产生最小对撞能量",
   "text.config.oritech-config.option.netherPortalRequiredSpeed": "下界传送门产生最小对撞能量",
   "text.config.oritech-config.option.blackHoleRequiredSpeed": "黑洞产生最小对撞能量",
+  "text.config.oritech-config.option.collectorEnergyStorage": "Tachyon Collector Energy Capacity",
+  "text.config.oritech-config.option.blackHoleTachyonEnergy": "Energy of Tachyons from Black Holes",
+  "text.config.oritech-config.option.tachyonCollisionEnergyFactor": "Particle Collision Tachyon RF Multiplier",
   "text.config.oritech-config.section.blackHole": "黑洞",
   "text.config.oritech-config.option.pullTimeMultiplier": "黑洞撕扯频率",
   "text.config.oritech-config.option.pullRange": "黑洞撕扯范围",
