--- a/common/src/main/resources/assets/oritech/lang/de_de.json
+++ b/common/src/main/resources/assets/oritech/lang/de_de.json
@@ -66,6 +66,7 @@
   "tooltip.oritech.needs_laser_power": "Must be powered via an enderic laser",
   "tooltip.oritech.steam_engine": "Processes steam into RF and water. Can be chained together",
   "tooltip.oritech.item_filter": "Used to filter which items can be inserted into an inventory.",
+  "tooltip.oritech.particle_collector": "Collects the energy of tachyons emitted by particle collisions.",
   "button.oritech.item_filter.whitelist": "Whitelist",
   "title.oritech.item_filter.whitelist": "Whitelist",
   "tooltip.oritech.item_filter.whitelist": "Currently only allows items through which \nmatch the listed items",
@@ -199,6 +200,7 @@
   "tooltip.oritech.energy_usage": "%s / %s RF\n%s%% Charged\n\nMaximum Usage: %s RF/t",
   "title.oritech.machine.no_addons": "No addons connected",
   "button.oritech.machine.addons": "Addons",
+  "tooltip.oritech.pipe_booster": "Increases the extraction speed of a fluid/item pipe behind it",
   "title.oritech.machine.capacitor_added_capacity": "🔋 %d RF ",
   "tooltip.oritech.machine.capacitor_added_capacity": "Added Capacity",
   "title.oritech.machine.capacitor_added_throughput": "🔋 %d RF/t",
@@ -213,6 +215,14 @@
   "title.oritech.catalyst.stabilized": "Stabilized",
   "title.oritech.catalyst.semi_stable": "Semi-Stable",
   "title.oritech.catalyst.unstable": "Unstable",
+  "tooltip.oritech.redstone_disabled": "Stopped",
+  "tooltip.oritech.redstone_disabled.tooltip": "This machine has been disabled with an active redstone signal.",
+  "tooltip.oritech.redstone_disabled_storage": "Blocked",
+  "tooltip.oritech.redstone_disabled_storage.tooltip": "Will not output power while disabled with a redstone signal",
+  "tooltip.oritech.redstone_enabled": "Normal",
+  "tooltip.oritech.redstone_enabled.tooltip": "This machine is operating as normal.\nDisable with with a redstone signal to the redstone addon",
+  "tooltip.oritech.redstone_enabled_direct": "Normal",
+  "tooltip.oritech.redstone_enabled_direct.tooltip": "This machine is operating as normal.\nDisable with with a redstone signal to this block or the addon",
   "tooltip.oritech.spawner.collected_souls": "%d / %d Souls",
   "tooltip.oritech.accelerator": "Injects particles into particle accelerator guide rings.",
   "tooltip.oritech.accelerator_motor": "Uses energy to speed up particles moving through it.",
@@ -291,6 +301,7 @@
   "block.oritech.fragment_forge_block": "Fragment Forge",
   "block.oritech.assembler_block": "Assembler",
   "block.oritech.foundry_block": "Foundry",
+  "block.oritech.particle_collector_block": "Tachyon Absorber",
   "block.oritech.centrifuge_block": "Centrifuge",
   "block.oritech.atomic_forge_block": "Atomic Forge",
   "block.oritech.bio_generator_block": "Bio Generator",
@@ -302,6 +313,7 @@
   "block.oritech.powered_furnace_block": "Powered Furnace",
   "block.oritech.laser_arm_block": "Enderic Laser",
   "block.oritech.deep_drill_block": "Bedrock Extractor",
+  "block.oritech.pipe_booster_block": "Pipe Booster",
   "block.oritech.drone_port_block": "Drone Port",
   "block.oritech.charger_block": "Equipment Charger",
   "block.oritech.small_storage_block": "Portable Energy Storage",
@@ -372,6 +384,20 @@
   "block.oritech.industrial_glass_block": "Industrial Glass",
   "block.oritech.capacitor_addon_extender": "Power Bank Addon",
   "block.oritech.treefeller_block": "Tree Cutter",
+  "block.oritech.steel_block": "Block of Steel",
+  "block.oritech.energite_block": "Block of Energite",
+  "block.oritech.nickel_block": "Block of Nickel",
+  "block.oritech.biosteel_block": "Block of Biosteel",
+  "block.oritech.platinum_block": "Block of Platinum",
+  "block.oritech.adamant_block": "Block of Adamant",
+  "block.oritech.electrum_block": "Block of Electrum",
+  "block.oritech.duratium_block": "Block of Duratium",
+  "block.oritech.biomass_block": "Block of Biomass",
+  "block.oritech.plastic_block": "Block of Plastic",
+  "block.oritech.fluxite_block": "Block of Fluxite",
+  "block.oritech.silicon_block": "Block of Silicon",
+  "block.oritech.raw_nickel_block": "Block of Raw Nickel",
+  "block.oritech.raw_platinum_block": "Block of Raw Platinum",
   "block.oritech.black_hole_block": [
     {
       "text": "Black Hole (WIP)",
@@ -496,6 +522,9 @@
   "item.oritech.jetpack_elytra": "Boosted Elytra",
   "item.oritech.jetpack_exo_elytra": "Boosted Exo Elytra",
   "item.oritech.oritech_guide": "Oritech Manual",
+  "fluid.oritech.still_fuel": "Turbofuel",
+  "fluid.oritech.still_oil": "Oil",
+  "fluid.oritech.still_steam": "Steam",
   "item.oritech.promethium_axe": [
     {
       "text": "Prometheum Battleaxe",
@@ -557,6 +586,7 @@
   "text.oritech.accelerator.ui.exited": "Particle Exited",
   "text.oritech.accelerator.ui.exited.stats": "Coordinates %s\nLast Curve Dist: %s\nMin Curve Dist: %s",
   "text.oritech.accelerator.ui.exited.nogate": "Coordinates %s\nNo gate in range\nRange: %s",
+  "text.oritech.redstone_power": "Level: %s",
   "text.config.oritech-config.title": "Oritech Settings",
   "text.config.oritech-config.section.machineSettings": "Machines",
   "text.config.oritech-config.category.processingMachines": "Processing Machines",
@@ -747,6 +777,9 @@
   "text.config.oritech-config.option.endPortalRequiredSpeed": "Minimum End Portal Collision Energy",
   "text.config.oritech-config.option.netherPortalRequiredSpeed": "Minimum Nether Portal Collision Energy",
   "text.config.oritech-config.option.blackHoleRequiredSpeed": "Minimum Black Hole Collision Energy",
+  "text.config.oritech-config.option.collectorEnergyStorage": "Tachyon Collector Energy Capacity",
+  "text.config.oritech-config.option.blackHoleTachyonEnergy": "Energy of Tachyons from Black Holes",
+  "text.config.oritech-config.option.tachyonCollisionEnergyFactor": "Particle Collision Tachyon RF Multiplier",
   "text.config.oritech-config.section.blackHole": "Black Hole",
   "text.config.oritech-config.option.pullTimeMultiplier": "Black Hole Pull Time Multiplier",
   "text.config.oritech-config.option.pullRange": "Black Hole Pull Range",
