--- a/common/src/main/resources/assets/oritech/lang/es_es.json
+++ b/common/src/main/resources/assets/oritech/lang/es_es.json
@@ -66,6 +66,7 @@
   "tooltip.oritech.needs_laser_power": "Debe ser alimentado mediante un láser endérico",
   "tooltip.oritech.steam_engine": "Procesa vapor en RF y agua. Se puede encadenar",
   "tooltip.oritech.item_filter": "Se usa para filtrar qué objetos pueden ser insertados en un inventario.",
+  "tooltip.oritech.particle_collector": "Collects the energy of tachyons emitted by particle collisions.",
   "button.oritech.item_filter.whitelist": "Lista Blanca",
   "title.oritech.item_filter.whitelist": "Lista Blanca",
   "tooltip.oritech.item_filter.whitelist": "Actualmente solo permite objetos que\ncoincidan con los objetos listados",
@@ -199,6 +200,7 @@
   "tooltip.oritech.energy_usage": "%s / %s RF\n%s%% Cargado\n\nUso Máximo: %s RF/t",
   "title.oritech.machine.no_addons": "Sin complementos conectados",
   "button.oritech.machine.addons": "Complementos",
+  "tooltip.oritech.pipe_booster": "Increases the extraction speed of a fluid/item pipe behind it",
   "title.oritech.machine.capacitor_added_capacity": "🔋 %d RF ",
   "tooltip.oritech.machine.capacitor_added_capacity": "Capacidad Añadida",
   "title.oritech.machine.capacitor_added_throughput": "🔋 %d RF/t",
@@ -213,6 +215,14 @@
   "title.oritech.catalyst.stabilized": "Estabilizado",
   "title.oritech.catalyst.semi_stable": "Semi-Estable",
   "title.oritech.catalyst.unstable": "Inestable",
+  "tooltip.oritech.redstone_disabled": "Stopped",
+  "tooltip.oritech.redstone_disabled.tooltip": "This machine has been disabled with an active redstone signal.",
+  "tooltip.oritech.redstone_disabled_storage": "Blocked",
+  "tooltip.oritech.redstone_disabled_storage.tooltip": "Will not output power while disabled with a redstone signal",
+  "tooltip.oritech.redstone_enabled": "Normal",
+  "tooltip.oritech.redstone_enabled.tooltip": "This machine is operating as normal.\nDisable with with a redstone signal to the redstone addon",
+  "tooltip.oritech.redstone_enabled_direct": "Normal",
+  "tooltip.oritech.redstone_enabled_direct.tooltip": "This machine is operating as normal.\nDisable with with a redstone signal to this block or the addon",
   "tooltip.oritech.spawner.collected_souls": "%d / %d Almas",
   "tooltip.oritech.accelerator": "Inyecta partículas en los anillos guía del acelerador de partículas.",
   "tooltip.oritech.accelerator_motor": "Usa energía para acelerar las partículas que pasan a través de él.",
@@ -291,6 +301,7 @@
   "block.oritech.fragment_forge_block": "Forja de fragmentos",
   "block.oritech.assembler_block": "Ensamblador",
   "block.oritech.foundry_block": "Fundición",
+  "block.oritech.particle_collector_block": "Tachyon Absorber",
   "block.oritech.centrifuge_block": "Centrífugadora",
   "block.oritech.atomic_forge_block": "Forja atómica",
   "block.oritech.bio_generator_block": "Generador de biomasa",
@@ -302,6 +313,7 @@
   "block.oritech.powered_furnace_block": "Horno eléctrico",
   "block.oritech.laser_arm_block": "Láser endérico",
   "block.oritech.deep_drill_block": "Extractor de Roca Base",
+  "block.oritech.pipe_booster_block": "Pipe Booster",
   "block.oritech.drone_port_block": "Puerto de Drones",
   "block.oritech.charger_block": "Cargador de Equipamiento",
   "block.oritech.small_storage_block": "Almacen Portable de Energía",
@@ -372,6 +384,20 @@
   "block.oritech.industrial_glass_block": "Vidrio industrial",
   "block.oritech.capacitor_addon_extender": "Complemento de banco de energía",
   "block.oritech.treefeller_block": "Cortador de árboles",
+  "block.oritech.steel_block": "Block of Steel",
+  "block.oritech.energite_block": "Block of Energite",
+  "block.oritech.nickel_block": "Block of Nickel",
+  "block.oritech.biosteel_block": "Block of Biosteel",
+  "block.oritech.platinum_block": "Block of Platinum",
+  "block.oritech.adamant_block": "Block of Adamant",
+  "block.oritech.electrum_block": "Block of Electrum",
+  "block.oritech.duratium_block": "Block of Duratium",
+  "block.oritech.biomass_block": "Block of Biomass",
+  "block.oritech.plastic_block": "Block of Plastic",
+  "block.oritech.fluxite_block": "Block of Fluxite",
+  "block.oritech.silicon_block": "Block of Silicon",
+  "block.oritech.raw_nickel_block": "Block of Raw Nickel",
+  "block.oritech.raw_platinum_block": "Block of Raw Platinum",
   "block.oritech.black_hole_block": [
     {
       "text": "Agujero Negro (WIP)",
@@ -496,6 +522,9 @@
   "item.oritech.jetpack_elytra": "Elytra potenciada",
   "item.oritech.jetpack_exo_elytra": "Elytra exo potenciada",
   "item.oritech.oritech_guide": "Manual de Oritech",
+  "fluid.oritech.still_fuel": "Turbofuel",
+  "fluid.oritech.still_oil": "Oil",
+  "fluid.oritech.still_steam": "Vapor",
   "item.oritech.promethium_axe": [
     {
       "text": "Hacha de batalla de Prometheum",
@@ -557,6 +586,7 @@
   "text.oritech.accelerator.ui.exited": "Partícula Salió",
   "text.oritech.accelerator.ui.exited.stats": "Coordenadas %s\nÚltima Distancia Curva: %s\nDistancia Mín. Curva: %s",
   "text.oritech.accelerator.ui.exited.nogate": "Coordenadas %s\nNo hay puerta en rango\nRango: %s",
+  "text.oritech.redstone_power": "Level: %s",
   "text.config.oritech-config.title": "Configuraciones de Oritech",
   "text.config.oritech-config.section.machineSettings": "Máquinas",
   "text.config.oritech-config.category.processingMachines": "Máquinas de Procesamiento",
@@ -747,6 +777,9 @@
   "text.config.oritech-config.option.endPortalRequiredSpeed": "Energía Mínima de Colisión para el Portal del Fin",
   "text.config.oritech-config.option.netherPortalRequiredSpeed": "Energía Mínima de Colisión para el Portal del Nether",
   "text.config.oritech-config.option.blackHoleRequiredSpeed": "Energía Mínima de Colisión para el Agujero Negro",
+  "text.config.oritech-config.option.collectorEnergyStorage": "Tachyon Collector Energy Capacity",
+  "text.config.oritech-config.option.blackHoleTachyonEnergy": "Energy of Tachyons from Black Holes",
+  "text.config.oritech-config.option.tachyonCollisionEnergyFactor": "Particle Collision Tachyon RF Multiplier",
   "text.config.oritech-config.section.blackHole": "Agujero Negro",
   "text.config.oritech-config.option.pullTimeMultiplier": "Multiplicador de Tiempo de Atracción del Agujero Negro",
   "text.config.oritech-config.option.pullRange": "Rango de Atracción del Agujero Negro",
