--- a/common/src/main/resources/assets/oritech/lang/fr_fr.json
+++ b/common/src/main/resources/assets/oritech/lang/fr_fr.json
@@ -66,6 +66,7 @@
   "tooltip.oritech.needs_laser_power": "Doit être alimenté via un laser enderique",
   "tooltip.oritech.steam_engine": "Transforme la vapeur en RF et en eau. Peut être enchaîné",
   "tooltip.oritech.item_filter": "Utilisé pour filtrer quels objets peuvent être insérés dans un inventaire.",
+  "tooltip.oritech.particle_collector": "Collects the energy of tachyons emitted by particle collisions.",
   "button.oritech.item_filter.whitelist": "Liste blanche",
   "title.oritech.item_filter.whitelist": "Liste blanche",
   "tooltip.oritech.item_filter.whitelist": "Actuellement, seuls les objets qui \ncorrespondent aux objets listés sont autorisés",
@@ -199,6 +200,7 @@
   "tooltip.oritech.energy_usage": "%s / %s RF\n%s%% Chargé\n\nUtilisation maximale : %s RF/t",
   "title.oritech.machine.no_addons": "Aucun module connecté",
   "button.oritech.machine.addons": "Modules",
+  "tooltip.oritech.pipe_booster": "Augmente la vitesse d'extraction d'un tuyau de fluide/objet avant lui",
   "title.oritech.machine.capacitor_added_capacity": "🔋 %d RF ",
   "tooltip.oritech.machine.capacitor_added_capacity": "Capacité ajoutée",
   "title.oritech.machine.capacitor_added_throughput": "🔋 %d RF/t",
@@ -213,6 +215,14 @@
   "title.oritech.catalyst.stabilized": "Stabilisé",
   "title.oritech.catalyst.semi_stable": "Semi-Stable",
   "title.oritech.catalyst.unstable": "Instable",
+  "tooltip.oritech.redstone_disabled": "Stopped",
+  "tooltip.oritech.redstone_disabled.tooltip": "This machine has been disabled with an active redstone signal.",
+  "tooltip.oritech.redstone_disabled_storage": "Blocked",
+  "tooltip.oritech.redstone_disabled_storage.tooltip": "Will not output power while disabled with a redstone signal",
+  "tooltip.oritech.redstone_enabled": "Normal",
+  "tooltip.oritech.redstone_enabled.tooltip": "This machine is operating as normal.\nDisable with with a redstone signal to the redstone addon",
+  "tooltip.oritech.redstone_enabled_direct": "Normal",
+  "tooltip.oritech.redstone_enabled_direct.tooltip": "This machine is operating as normal.\nDisable with with a redstone signal to this block or the addon",
   "tooltip.oritech.spawner.collected_souls": "%d / %d Âmes",
   "tooltip.oritech.accelerator": "Injecte des particules dans les anneaux de guidage de l'accélérateur de particules.",
   "tooltip.oritech.accelerator_motor": "Utilise de l'énergie pour accélérer les particules qui passent à travers.",
@@ -291,6 +301,7 @@
   "block.oritech.fragment_forge_block": "forge à fragmentation",
   "block.oritech.assembler_block": "Assembleur",
   "block.oritech.foundry_block": "Fonderie",
+  "block.oritech.particle_collector_block": "Tachyon Absorber",
   "block.oritech.centrifuge_block": "Centrifugeuse",
   "block.oritech.atomic_forge_block": "Forge atomique",
   "block.oritech.bio_generator_block": "Bio Générateur",
@@ -302,6 +313,7 @@
   "block.oritech.powered_furnace_block": "Fourneau électrique",
   "block.oritech.laser_arm_block": "Laser Enderique",
   "block.oritech.deep_drill_block": "Extracteur de bedrock",
+  "block.oritech.pipe_booster_block": "Accélérateur de tuyau",
   "block.oritech.drone_port_block": "Station de drone",
   "block.oritech.charger_block": "Chargeur d'équipement",
   "block.oritech.small_storage_block": "Stockage d'énergie portable",
@@ -372,6 +384,20 @@
   "block.oritech.industrial_glass_block": "Verre industriel",
   "block.oritech.capacitor_addon_extender": "Module de banque d'énergie",
   "block.oritech.treefeller_block": "Coupe-arbres",
+  "block.oritech.steel_block": "Block of Steel",
+  "block.oritech.energite_block": "Block of Energite",
+  "block.oritech.nickel_block": "Block of Nickel",
+  "block.oritech.biosteel_block": "Block of Biosteel",
+  "block.oritech.platinum_block": "Block of Platinum",
+  "block.oritech.adamant_block": "Block of Adamant",
+  "block.oritech.electrum_block": "Block of Electrum",
+  "block.oritech.duratium_block": "Block of Duratium",
+  "block.oritech.biomass_block": "Block of Biomass",
+  "block.oritech.plastic_block": "Block of Plastic",
+  "block.oritech.fluxite_block": "Block of Fluxite",
+  "block.oritech.silicon_block": "Block of Silicon",
+  "block.oritech.raw_nickel_block": "Block of Raw Nickel",
+  "block.oritech.raw_platinum_block": "Block of Raw Platinum",
   "block.oritech.black_hole_block": [
     {
       "text": "Trou noir (En développement)",
@@ -496,6 +522,9 @@
   "item.oritech.jetpack_elytra": "Elytra Boostée",
   "item.oritech.jetpack_exo_elytra": "Elytra Exo Boostée",
   "item.oritech.oritech_guide": "Manuel Oritech",
+  "fluid.oritech.still_fuel": "Turbocarburant",
+  "fluid.oritech.still_oil": "Pétrole",
+  "fluid.oritech.still_steam": "Vapeur",
   "item.oritech.promethium_axe": [
     {
       "text": "Hache de combat en Prometheum",
@@ -557,6 +586,7 @@
   "text.oritech.accelerator.ui.exited": "Particule sortie",
   "text.oritech.accelerator.ui.exited.stats": "Coordonnées %s\nDernière dist de courbe : %s\nDist min de courbe : %s",
   "text.oritech.accelerator.ui.exited.nogate": "Coordonnées %s\nAucune porte en portée\nPortée : %s",
+  "text.oritech.redstone_power": "Level: %s",
   "text.config.oritech-config.title": "Paramètres Oritech",
   "text.config.oritech-config.section.machineSettings": "Machines",
   "text.config.oritech-config.category.processingMachines": "Machines de traitement",
@@ -747,6 +777,9 @@
   "text.config.oritech-config.option.endPortalRequiredSpeed": "Énergie de collision minimale requise pour le portail de l'End",
   "text.config.oritech-config.option.netherPortalRequiredSpeed": "Énergie de collision minimale requise pour le portail du Nether",
   "text.config.oritech-config.option.blackHoleRequiredSpeed": "Énergie de collision minimale requise pour le trou noir",
+  "text.config.oritech-config.option.collectorEnergyStorage": "Tachyon Collector Energy Capacity",
+  "text.config.oritech-config.option.blackHoleTachyonEnergy": "Energy of Tachyons from Black Holes",
+  "text.config.oritech-config.option.tachyonCollisionEnergyFactor": "Particle Collision Tachyon RF Multiplier",
   "text.config.oritech-config.section.blackHole": "Trou noir",
   "text.config.oritech-config.option.pullTimeMultiplier": "Multiplicateur de temps d'attraction du trou noir",
   "text.config.oritech-config.option.pullRange": "Portée d'attraction du trou noir",
