More work on reactor UI

--- a/common/src/main/resources/assets/oritech/lang/en_us.json
+++ b/common/src/main/resources/assets/oritech/lang/en_us.json
@@ -571,6 +571,15 @@
   "tooltip.oritech.tool_mode.area_range.area": "Mode: Area",
   "tooltip.oritech.tool_mode.area_range.single": "Mode: Single",
   "config.jade.plugin_oritech.machine_core_controller": "Oritech Controller Link View",
+  "text.oritech.reactor.rod_count": "Rod Count: %s",
+  "text.oritech.reactor.generated_pulses": "Internal Pulses: %s",
+  "text.oritech.reactor.received_pulses": "External Pulses: %s",
+  "text.oritech.reactor.generated_heat": "Generated Heat: %s K/t",
+  "text.oritech.reactor.generated_energy": "Generated Energy: %s RF/t",
+  "text.oritech.reactor.heat_to_reactor": "Heat to Reactor: %s K/t",
+  "text.oritech.reactor.heat": "Heat: %s K",
+  "text.oritech.reactor.collected_heat": "Ingested Heat: %s K/t",
+  "text.oritech.reactor.removed_heat": "Dispersed Heat: %s K/t",
   "text.oritech.accelerator.ui.waiting.0": "Waiting.",
   "text.oritech.accelerator.ui.waiting.1": "Waiting..",
   "text.oritech.accelerator.ui.waiting.2": "Waiting...",
