Add missing renderers to docs (Fixes #155)

--- a/docs/interaction/pump.mdx
+++ b/docs/interaction/pump.mdx
@@ -4,7 +4,7 @@ icon: oritech:pump_block
 ---
 
 <center>
-<ModAsset location="oritech:area/pump_block" width={512} />
+<ModAsset location="oritech:area/pump" width={512} />
 </center>
 
 The pump is used to extract liquids from below. When placed, it extends a trunk downward until it encounters a liquid or obstruction. Once a liquid is found, it scans the liquid body and stores all positions to pump from.
