--- a/docs/interaction/block_placer.mdx
+++ b/docs/interaction/block_placer.mdx
@@ -4,7 +4,7 @@ icon: oritech:placer_block
 ---
 
 <center>
-<ModAsset location="oritech:area/placer_block" width={512} />
+<ModAsset location="oritech:area/block_placer" width={512} />
 </center>
 
 The block placer places blocks from its inventory onto the layer below the [machine frame](../interaction/machine_frames). It can also be used to plant seeds in farmland or saplings.
