Add extra tooltip regarding output to fuel generator block

--- a/common/src/main/resources/assets/oritech/lang/en_us.json
+++ b/common/src/main/resources/assets/oritech/lang/en_us.json
@@ -280,7 +280,8 @@
   "tooltip.oritech.enchanter_item_needed": "Insert Item",
   "tooltip.oritech.enchanter_souls_used": " Souls Used",
   "tooltip.oritech.enchanter_selection": "Select Enchantment",
-  "tooltip.oritech.creative_tank": "Right click with a bucket to set or an empty one to empty",
+  "tooltip.oritech.creative_tank": "Right click with a bucket to set or an empty one to empty.",
+  "tooltip.oritech.fuel_generator_block.extra": "Outputs energy only at the visual connector ports.",
   "block.oritech.banana_block": "Banana Block",
   "block.oritech.machine_frame_block": "Machine Frame",
   "block.oritech.fluid_pipe": "Fluid Pipe",
